ssl-certificate/06-referencegrant-grafana-tls.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-grafana-tls
  namespace: monitoring
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: ml-ops
  to:
    - group: ""
      kind: Secret
      name: grafana-tls
