ssl-certificate/04-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: ml-ops
spec:
  gatewayClassName: eg
  listeners:

  - name: https-example
    protocol: HTTPS
    port: 443
    hostname: example.example.com #app-domain name
    tls:
      mode: Terminate
      certificateRefs:
        - name: example-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: enabled

  - name: https-grafana
    protocol: HTTPS
    port: 443
    hostname: grafana.example.com #grafana-domain name
    tls:
      mode: Terminate
      certificateRefs:
        - name: grafana-tls
          namespace: monitoring
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: enabled

  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: enabled
