ssl-certificate/05-http-route-ml-ops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ml-api-route
  namespace: ml-ops
spec:
  parentRefs:
    - name: eg
      namespace: ml-ops
  hostnames:
    - example.example.com  #app-domain name
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /predict
      backendRefs:
        - name: intent-classifier
          port: 80
